  prevent it from overlapping the plot itself. This also fixes a
  problem with anti-aliasing when the width is 1 pixel (reported by
  Anthony Ettinger).
- Imported SVN version of excanvas and fixed an issue with the newer
  version. Hopefully, this will make Flot work with IE8 (nudge by
  Fabien Menager).
- Changed the shadow code for lines to hopefully look a bit better
  with vertical lines.


Flot 0.5
--------

Backwards API change summary: Timestamps are now in UTC. Also
"selected" event -> becomes "plotselected" with new data, the
parameters for setSelection are now different (but backwards
compatibility hooks are in place), coloredAreas becomes markings with
a new interface (but backwards compatibility hooks are in place).


Interactivity: added a new "plothover" event and this and the
"plotclick" event now returns the closest data item (based on patch by
/david, patch by Mark Byers for bar support). See the revamped
"interacting with the data" example for some hints on what you can do.

Highlighting: you can now highlight points and datapoints are
autohighlighted when you hover over them (if hovering is turned on).

Support for dual axis has been added (based on patch by someone who's
annoyed and /david). For each data series you can specify which axes
it belongs to, and there are two more axes, x2axis and y2axis, to
customize. This affects the "selected" event which has been renamed to
"plotselected" and spews out { xaxis: { from: -10, to: 20 } ... },
setSelection in which the parameters are on a new form (backwards
compatible hooks are in place so old code shouldn't break) and
markings (formerly coloredAreas).

Timestamps in time mode are now displayed according to
UTC instead of the time zone of the visitor. This affects the way the
timestamps should be input; you'll probably have to offset the
timestamps according to your local time zone. It also affects any
custom date handling code (which basically now should use the